--- a/index.html
+++ b/index.html
@@ -2,32 +2,233 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
+    rel="stylesheet">
   
   <title>Frontend Mentor | Base Apparel coming soon page</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    :root {
+      --light-red: hsl(0, 36%, 70%);
+      --red: hsl(0, 93%, 68%);
+      --dark-red: hsl(0, 6%, 24%);
+    }
+
+    body {
+      box-sizing: border-box;
+      font-family: 'Josefin Sans', sans-serif;
+      margin: 0;
+    }
+
+    header {
+      padding: 30px 100px;
+      position: fixed;
+      transition: all ease 0.3s;
+      width: calc(60% - 200px);
+      z-index: 5;
+    }
+
+    header .logo {
+      margin: 0 auto;
+      max-width: 45ch;
+    }
+
+    main {
+      display: flex;
+      height: 100dvh;
+      justify-content: space-between;
+      min-height: 700px;
+      position: relative;
+    }
+
+    main:before {
+      content: '';
+      background-image: 
+        url('./images/bg-pattern-desktop.svg'), 
+        linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%));
+      background-repeat: no-repeat;
+      background-size: cover;
+      left: 0;
+      position: absolute;
+      height: 100%;
+      top: 0;
+      width: 60vw;
+      z-index: -1;
+    }
+
+    h1 {
+      color: var(--dark-red);
+      font-size: clamp(32px, 5vw, 65px);
+      font-weight: 400;
+      letter-spacing: 3px;
+      line-height: 1.2;
+      margin: 0 0 25px;
+      text-transform: uppercase;
+    }
+
+    p {
+      color: var(--light-red);
+      font-size: 16px;
+      line-height: 1.5;
+      margin: 0;
+    }
+
+    a {
+      color: #fff;
+      transition: all ease 0.3s;
+    }
+
+    a:hover {
+      color: var(--dark-red);
+    }
+
+    label {
+      bottom: -60%;
+      color: var(--red);
+      display: none;
+      font-size: 16px;
+      left: 30px;
+      position: absolute;
+    }
+
+    .splash-content {
+      align-self: center;
+      flex-basis: 60%;
+      margin: 0 auto;
+      max-width: 45ch;
+      padding: 50px 100px;
+    }
+
+    .thin-text {
+      color: var(--light-red);
+      font-weight: 200;
+    }
+
+    form {
+      display: flex;
+      margin-top: 30px;
+      position: relative;
+      width: 90%;
+    }
+
+    form input {
+      background: transparent;
+      border: 1px solid var(--light-red);
+      border-radius: 25px;
+      color: var(--dark-red);
+      font-size: 16px;
+      padding: 15px 75px 15px 30px;
+      font-family: 'Josefin Sans', sans-serif;
+      width: 100%;
+    }
+
+    form input::placeholder {
+      color: var(--light-red);
+    }
+
+    form input:focus-visible {
+      border-color: var(--dark-red);
+      outline: none;
+    }
+
+    form button {
+      background: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
+      border: 1px solid transparent;
+      border-radius: 25px;
+      box-shadow: hsl(0, 36%, 70%) 0px 8px 24px;
+      height: 100%;
+      padding: 15px 40px;
+      position: absolute;
+      right: 0;
+      transform: translate3d(25%, 0, 0);
+    }
+
+    form button:hover {
+      background: hsl(0, 80%, 86%);
+      cursor: pointer;
+    }
+
+    .error-icon {
+      display: none;
+      position: absolute;
+      left: 1%;
+      top: 50%;
+      transform: translate3d(0, -50%, 0);
+    }
+
+    .splash-image {
+      flex-basis: 40%;
+      flex-shrink: 0;
+    }
+
+    .splash-image img {
+      height: 100%;
+      object-fit: cover;
+      width: 100%;
+    }
+
+    footer {
+      background-color: var(--red);
+      padding: 10px;
+      text-align: center;
+    }
+
+    footer small {
+      color: #fff;
+    }
   </style>
 </head>
 <body>
+  <header>
+    <div class="logo">
+      <img src="./images/logo.svg" alt="site logo for Base Apparel">
+    </div>
+  </header>
 
-  We're coming soon
-
-  Hello fellow shoppers! We're currently building our new fashion store. 
-  Add your email below to stay up-to-date with announcements and our launch deals.
-
-  Email Address
+  <main>
+    <div class="splash-content">
+      <div class="title-content">
+        <h1><span class="thin-text">We're</span> coming soon</h1>
+        <p class="subtitle">
+          Hello fellow shoppers! We're currently building our new fashion store.
+          Add your email below to stay up-to-date with announcements and our launch deals.
+        </p>
+      </div>
+      <form action="/">
+        <input type="email" name="email" placeholder="Email Address" aria-label="email address">
+        <img src="./images/icon-error.svg" alt="exclamation point" class="error-icon"></img>
+        <label for="email">Please provide a valid email</label>
+        <button type="submit" aria-label="submit form">
+          <img src="./images/icon-arrow.svg" alt="Right arrow">
+        </button>
+      </form>
+    </div>
+    <div class="splash-image">
+      <img src="./images/hero-desktop.jpg" alt="Model standing in front of plant and posing while wearing Base Apparel clothing.">
+    </div>
   
+  </main>
+ 
   <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
+    <small class="attribution">
+      Design by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://www.linkedin.com/in/emily-hennes/" target="_blank">Emily Hennes</a>.
+    </small>
   </footer>
+
+  <script>
+    window.addEventListener('scroll', () => {
+      if (window.scrollY > 10) {
+        document.querySelector('header').style.backgroundColor = '#fff';
+      } else {
+        document.querySelector('header').style.backgroundColor = 'transparent';
+      }
+    });
+  </script>
 </body>
 </html>
