Update form field.

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         </p>
       </div>
       <form>
-        <input type="email" name="email" placeholder="Email Address" aria-label="email address">
+        <input id="email" type="email" name="email" placeholder="Email Address" aria-label="email address">
         <img src="./images/icon-error.svg" alt="exclamation point" class="error-icon"></img>
         <button type="submit" aria-label="submit form" onclick="validateForm(event)">
           <img src="./images/icon-arrow.svg" alt="Right arrow">
